--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <title>Discussion Board</title>
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
-    <script type="text/javascript" src="script/script.js"></script>
+    <script type="text/javascript" src="/script.js"></script>
 </head>
 
 <body>
@@ -15,12 +15,13 @@
   <div class="container">
     <div id="leftContent">
       <h4><a href="index.html">my discussion board</a></h4>
+      <form method="post" action="#" id="searchForm" >
       <input type="text" placeholder="search" id="search" class="textfield" ><input type="submit" value="" id="searchbtn" >
       </form>
-      <form method="post" action="#" id="loginForm">
-        <input type="text" placeholder="e-mail" name="email"></input>
-        <input type="text" placeholder="password" name="password"></input>
-        <input type="submit" value="login" class="btn" id="btnL"></input>
+      <form method="post" action="php/login.php" id="loginForm">
+        <input type="text" placeholder="username" name="username">
+        <input type="password" placeholder="password" name="password">
+        <input type="submit" value="login" class="btn" id="btnL">
         <br><p><a href="register.html">login or sign up?</a></p>
       </form>
 
@@ -42,34 +43,19 @@
 
     <article id="bodyContent">
 
-
-
-
-
       <div id="regFormLeft">
-        <form method="post" action="#">
+        <form method="post" action="php/register.php">
           <h4>create new account</h4>
-          <input type="text" placeholder="name" class="regForm" name="textfield"></input>
-          <input type="text" placeholder="e-mail" class="regForm" name="email"></input>
-          <input type="text" placeholder="password" class="regForm" name="password"></input>
-          <input type="text" placeholder="verify password" class="regForm" name="password"></input>
-          <input type="submit" value="register" class="btn" id="btnL"></input>
+          <input type="text" placeholder="username" class="regForm" name="username">
+          <input type="text" placeholder="name" class="regForm" name="name">
+          <input type="text" placeholder="e-mail" class="regForm" name="email">
+          <input type="password" placeholder="password" class="regForm" name="password">
+          <input type="password" placeholder="verify password" class="regForm" name="passwordVerify">
+          <input type="submit" value="register" class="btn" id="btnL">
         </form>
       </div>
 
 
-
-
-
-
-      <div id="regFromRight">
-        <h4>login</h4>
-        <form method="post" action="#">
-          <input type="text" placeholder="e-mail" class="regForm" name="email"></input>
-          <input type="text" placeholder="password" class="regForm" name="password"></input>
-          <input type="submit" value="login" class="btn" id="btnL"></input>
-        </form>
-      </div>
     </article>
 
     <footer>
